[gd_scene load_steps=19 format=2]

[ext_resource path="res://Sprites/Campfire/fire6.png" type="Texture" id=1]
[ext_resource path="res://Sprites/Campfire/fire7.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Campfire/fire8.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Campfire/fire9.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Campfire/fire10.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Campfire/fire3.png" type="Texture" id=6]
[ext_resource path="res://Sprites/Campfire/fire0.png" type="Texture" id=7]
[ext_resource path="res://Sprites/Campfire/fire1.png" type="Texture" id=8]
[ext_resource path="res://Sprites/Campfire/fire2.png" type="Texture" id=9]
[ext_resource path="res://Sprites/Campfire/fire4.png" type="Texture" id=10]
[ext_resource path="res://Sprites/Campfire/fire5.png" type="Texture" id=11]
[ext_resource path="res://Campfire.gd" type="Script" id=12]
[ext_resource path="res://Comfortaa-Bold.ttf" type="DynamicFontData" id=13]
[ext_resource path="res://Sprites/GUI/B.png" type="Texture" id=14]
[ext_resource path="res://Sprites/GUI/B_key.png" type="Texture" id=15]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 6 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 1 ), ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ) ],
"loop": true,
"name": "default",
"speed": 7.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 64, 32 )

[sub_resource type="DynamicFont" id=3]
size = 20
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 13 )

[node name="Campfire" type="Area2D"]
script = ExtResource( 12 )
__meta__ = {
"_edit_vertical_guides_": [ -125.75 ]
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0.127693, 8.0703 )
scale = Vector2( 0.1, 0.1 )
frames = SubResource( 1 )
frame = 10
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 2 )

[node name="hp" type="Label" parent="."]
visible = false
anchor_left = 0.5
anchor_right = 0.5
margin_left = -158.0
margin_top = -86.9648
margin_right = 157.0
margin_bottom = -63.9648
custom_fonts/font = SubResource( 3 )
text = " .  per curar 10hp [50 ànimes]"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="top" type="Label" parent="hp"]
visible = false
anchor_left = 0.5
anchor_right = 0.5
margin_left = -6.50998
margin_top = -14.6083
margin_right = 5.49002
margin_bottom = 8.39171
custom_fonts/font = SubResource( 3 )
text = "^"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bottom" type="Label" parent="hp"]
margin_left = 161.31
margin_top = 35.1012
margin_right = 172.31
margin_bottom = 58.1012
rect_rotation = 180.0
custom_fonts/font = SubResource( 3 )
text = "^"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="B" type="Sprite" parent="hp"]
position = Vector2( 14.2528, 12.363 )
scale = Vector2( 1.91119, 1.91119 )
texture = ExtResource( 14 )

[node name="B_key" type="Sprite" parent="hp"]
visible = false
position = Vector2( 12.38, 14.2359 )
scale = Vector2( 1.675, 1.675 )
texture = ExtResource( 15 )

[node name="respawn" type="Label" parent="."]
visible = false
anchor_left = 0.5
anchor_right = 0.5
margin_left = -157.7
margin_top = -99.8348
margin_right = 153.3
margin_bottom = -50.8348
custom_fonts/font = SubResource( 3 )
text = " .   per establir punt de guardat [500 ànimes]"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="top" type="Label" parent="respawn"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -4.46527
margin_top = -14.9056
margin_right = 7.53473
margin_bottom = 8.09441
custom_fonts/font = SubResource( 3 )
text = "^"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bottom" type="Label" parent="respawn"]
visible = false
margin_left = 160.864
margin_top = 63.61
margin_right = 171.864
margin_bottom = 86.61
rect_rotation = 180.0
custom_fonts/font = SubResource( 3 )
text = "^"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="B" type="Sprite" parent="respawn"]
position = Vector2( 47.5388, 12.4565 )
scale = Vector2( 1.91119, 1.91119 )
texture = ExtResource( 14 )

[node name="B_key" type="Sprite" parent="respawn"]
visible = false
position = Vector2( 47.5004, 12.5203 )
scale = Vector2( 1.67469, 1.67469 )
texture = ExtResource( 15 )

[node name="estus" type="Label" parent="."]
visible = false
anchor_left = 0.5
anchor_right = 0.5
margin_left = -157.7
margin_top = -99.8348
margin_right = 153.3
margin_bottom = -50.8348
custom_fonts/font = SubResource( 3 )
text = " .   per reomplir el càntir d'estus [300 ànimes]"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="top" type="Label" parent="estus"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -4.46527
margin_top = -14.9056
margin_right = 7.53473
margin_bottom = 8.09441
custom_fonts/font = SubResource( 3 )
text = "^"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bottom" type="Label" parent="estus"]
margin_left = 160.864
margin_top = 63.61
margin_right = 171.864
margin_bottom = 86.61
rect_rotation = 180.0
custom_fonts/font = SubResource( 3 )
text = "^"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="B" type="Sprite" parent="estus"]
position = Vector2( 39.3919, 12.5283 )
scale = Vector2( 1.91119, 1.91119 )
texture = ExtResource( 14 )

[node name="B_key" type="Sprite" parent="estus"]
visible = false
position = Vector2( 39.2606, 12.4608 )
scale = Vector2( 1.67469, 1.67469 )
texture = ExtResource( 15 )
[connection signal="body_entered" from="." to="." method="_on_Campfire_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Campfire_body_exited"]
